[package]
name = "woodpecker_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/*"]

[features]
default = []
debug-render = []
metrics = []

[dependencies]
bevy_mod_picking = "0.20"
bevy_vello = { version = "0.5", features = ["svg"] }
bevy-inspector-egui = "0.25"
bevy-trait-query = { git = "https://github.com/RobWalt/bevy-trait-query", rev = "215b9068e8457d96ddcd4c8efa9605ba0f8feda5" }
cosmic-text = "0.12"
image = "0.24"
interpolation = "0.2"
smol_str = { version = "0.2", default-features = false }
taffy = { version = "0.5", features = ["flexbox", "grid"] }
thiserror = "1.0"
unicode-segmentation = "1.10.0"
usvg = "0.42"
web-time = "1.1"

# Local
woodpecker_ui_macros.path = "crates/woodpecker_ui_macros" # TODO: Make this crates.io friendly..

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4"
bevy = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.14", default-features = false, features = ["webgpu"] }
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"


[dev-dependencies]
calc = { version = "0.4.0", default-features = false }
bevy = { version = "0.14", features = ["jpeg"] }

[patch.crates-io]
bevy_mod_picking = { git = "https://github.com/StarArawn/bevy_mod_picking", branch = "main" }
bevy_eventlistener = { git = "https://github.com/StarArawn/bevy_eventlistener", branch = "main" }

[[example]]
name = "todo"
path = "examples/todo/todo.rs"
