[package]
name = "woodpecker_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/*"]

[features]
default = []
hotreload = ["dioxus-devtools", "woodpecker_ui_macros/hotreload"]
debug-render = []
metrics = []

[dependencies]
parley = { git = "https://github.com/linebender/parley", rev = "74a3499920675a63450727e44a75a57f76389e7a" }
# bevy_vello = { path = "../bevy_vello", features = ["text", "default_font"] }
bevy_vello = { git = "https://github.com/StarArawn/bevy_vello", rev = "845e45d5c85bef6bd6c0432fdb1a668fc43c0b94", features = ["text", "default_font"] }
bevy-trait-query = "0.16"
dioxus-devtools = { version = "0.7.0-alpha.0", optional = true }
bytemuck = "1.23.0"
image = "0.24"
interpolation = "0.2"
palette = "0.7.6"
skrifa = "0.30.0"
smol_str = { version = "0.2", default-features = false }
taffy = { version = "0.5", features = ["flexbox", "grid"] }
thiserror = "1.0"
usvg = "0.44"
web-time = "1.1"

# Local
woodpecker_ui_macros.path = "crates/woodpecker_ui_macros" # TODO: Make this crates.io friendly..
ttf-parser = "0.25.1"
autumnus = "0.3.2"
ansi-parser = "0.9.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4"
bevy = { version = "0.16" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16", default-features = false, features = ["webgpu"] }
web-sys = { version = "0.3", features = ["Clipboard", "Navigator"] }
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"

[dev-dependencies]
calc = { version = "0.4.0", default-features = false }
bevy = { version = "0.16", features = ["jpeg", "bevy_dev_tools"] }
bevy-inspector-egui = "0.31"

[patch.crates-io]
# bevy_vello = { git = "https://github.com/linebender/bevy_vello", rev = "7fe648ccb9766ecf2ef469f08c9f21093c3544e6" }

[[example]]
name = "todo"
path = "examples/todo/todo.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
