[package]
name = "woodpecker_ui_macros"
version = "0.1.0"
description = "A crate to help support woodpecker ui with proc macros."
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
hotreload = ["dioxus-devtools"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
proc-macro-error = "1.0"
dioxus-devtools = { version = "0.7.0-alpha.0", optional = true }
